2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable testing of s08 and r3ka ports.

2012-03-17 Borut Razem <borut.razem AT gmail.com>

	* local/netbsd-i386.mk: disabled -j 2 since src/SDCCnaddr.cc
	  compilation mysteriously fails if enabled

2012-03-13 Borut Razem <borut.razem AT gmail.com>

	* lib/doc-archive.mk:
	  test if *.txt, *.html and *.pdf exist before copying

2012-03-11 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk:
	  use config.guess to detect the default build and host system
	* support/config.guess: added
	* local/derna.mk: added TARGETCPPFLAGS

2012-03-09 Borut Razem <borut.razem AT gmail.com>

	* local/solaris-x86.mk: added TARGETCPPFLAGS

2012-03-01 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk: removed comment "test-gbz80 temporary disabled"
	* local/netbsd-i386.mk: added TARGETCPPFLAGS, added -I/usr/pkg/include
	* local/mypants.mk: added -I/usr/pkg/include
	* local/cf-86.mk: added TARGETCPPFLAGS

2012-02-17 Borut Razem <borut.razem AT gmail.com>

	* local/dev.mk, local/mypants.mk: added TARGETCPPFLAGS

2012-02-16 Borut Razem <borut.razem AT gmail.com>

	* local/dhcp101.mk:
	  HOSTOS and TARGETOS renamed to i386-apple-darwin

2012-02-13 Borut Razem <borut.razem AT gmail.com>

	* local/mirror-doors.mk, local/dhcp101.mk:
	  added --disable-dependency-tracking configure flag to enable
	  support/sdbinutils/bfd compilation

2012-02-11 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk, lib/cross.mk: added TARGETAR

2012-10-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* lib/variables.mk:
	  Added test-ucgbz80 to the list of regression test targets.

2012-01-16 Borut Razem <borut.razem AT gmail.com>

	* local/freebsd-i386.mk: disabled -j 2 since src/z80/ralloc2.cc
	  compilation mysteriously fails if enabled;
	  added TARGETCPPFLAGS so that the cpp can finde stx and boost
	  include files during configure

2012-01-06 Borut Razem <borut.razem AT gmail.com>
